kubernetes/home-assistant/home-assistant-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingress
  namespace: cert-manager
  annotations:
    gethomepage.dev/href: https://home.admin.thelegend27.fr
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/description: Home Automation
    gethomepage.dev/icon: home-assistant.png
    gethomepage.dev/group: Home
    gethomepage.dev/pod-selector: app=home-assistant
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.admin.thelegend27.fr`)
      # middlewares:
      #   - name: traefik-forward-auth
      #     namespace: traefik
      services:
        - name: home-assistant
          namespace: home-assistant
          port: 8123

  tls:
    secretName: wildcard-admin-thelegend27-tls
